# tetris-roulette

./: .env.example  README.md  pytest.ini
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/auth/: deps.py
apps/api/app/core/: config.py  db.py
apps/api/app/models/: match.py  queue.py  transaction.py  user.py
apps/api/app/routes/: __init__.py  admin.py  auth.py  matches.py  queue.py  wallet.py
apps/api/app/schemas/: auth.py  matchmaking.py  wallet.py
apps/api/app/services/: auth_service.py  token_service.py
apps/api/app/tests/: test_settings.py
apps/infra/: docker-compose.yml  nginx.conf
apps/web/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
apps/web/e2e/: example.spec.ts
apps/web/src/: main.tsx
apps/web/src/app/: globals.css
apps/web/src/components/: NeonButton.tsx
apps/web/src/hooks/: useBalance.ts
apps/web/src/pages/: App.tsx
